--- a/index.html
+++ b/index.html
@@ -190,4 +190,19 @@
 
     <script src="script.js" type="module"></script>
 </body>
+
+<!-- Login Modal -->
+<div id="loginModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 hidden">
+    <div class="bg-white p-6 rounded-lg shadow-lg w-11/12 max-w-md relative">
+        <button onclick="closeModal('loginModal')" class="absolute top-3 right-3 text-gray-600 hover:text-gray-900">
+            <i class="fas fa-times"></i>
+        </button>
+        <h2 class="text-2xl font-bold mb-4 text-center text-lipstick-dark">লগইন করুন</h2>
+        <p class="text-center text-gray-700 mb-6">আপনার গুগল অ্যাকাউন্ট দিয়ে লগইন করুন</p>
+        <button onclick="loginWithGmail()" class="w-full bg-red-500 text-white py-3 rounded-lg flex items-center justify-center hover:bg-red-600 transition-colors">
+            <i class="fab fa-google mr-2"></i> গুগল দিয়ে লগইন
+        </button>
+    </div>
+</div>
+
 </html>
