refactor: remove login modal and use direct google sign-in

--- a/header.html
+++ b/header.html
@@ -69,7 +69,7 @@
                     </button>
                     <ul class="mt-4 flex-1 overflow-y-auto">
                         <li id="mobileLoginButton" class="border-b border-gray-200 py-2">
-                            <button class="flex items-center w-full" onclick="openLoginModal()">
+                            <button class="flex items-center w-full" onclick="loginWithGmail()">
                                 <i class="fas fa-user-circle mr-2 bg-red-500 text-white p-1 rounded-full"></i>
                                 <span><span class="text-black">লগইন</span></span>
                             </button>
@@ -104,7 +104,7 @@
         <!-- ডেস্কটপ মেনু -->
         <nav class="hidden md:flex space-x-4 items-center">
             <div id="desktopLoginButton">
-                <button class="flex items-center" onclick="openLoginModal()">
+                <button class="flex items-center" onclick="loginWithGmail()">
                     <i class="fas fa-user-circle mr-2 bg-red-500 text-white p-1 rounded-full"></i>
                     <span><span class="text-black">লগইন</span></span>
                 </button>
