feat: Implement global loading spinner and fix page loading issues

--- a/order-form.html
+++ b/order-form.html
@@ -11,7 +11,15 @@
     <script type="module" src="script.js"></script>
 
 </head>
-<body class="bg-background">
+<body>
+    <!-- Global Loading Spinner -->
+    <div id="global-loading-spinner">
+        <div class="spinner-dots">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </div>
     <div id="header"></div>
 
     <main class="p-4 pt-24 md:pt-28">
