--- a/product-detail.html
+++ b/product-detail.html
@@ -35,7 +35,15 @@
     </style>
 
 </head>
-<body class="bg-background">
+<body>
+    <!-- Global Loading Spinner -->
+    <div id="global-loading-spinner">
+        <div class="spinner-dots">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </div>
     <div id="header"></div>
     <main class="p-4 pt-24 md:pt-28 max-w-4xl mx-auto"> 
         <div id="loadingSpinner" class="text-center p-10">
