--- a/index.html
+++ b/index.html
@@ -26,7 +26,15 @@
         }
     </script>
 </head>
-<body class="bg-background">
+<body>
+    <!-- Global Loading Spinner -->
+    <div id="global-loading-spinner">
+        <div class="spinner-dots">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </div>
     <div id="header"></div>
 
     <!-- মোবাইল সার্চ বার -->
