--- a/order-track.html
+++ b/order-track.html
@@ -9,7 +9,15 @@
     <link rel="stylesheet" href="styles.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
-<body class="bg-gray-100">
+<body>
+    <!-- Global Loading Spinner -->
+    <div id="global-loading-spinner">
+        <div class="spinner-dots">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </div>
     <!-- হেডার -->
     <div id="header"></div>
 
