--- a/product-detail.html
+++ b/product-detail.html
@@ -33,6 +33,7 @@
         #modalPrevBtn { left: 20px; }
         #modalNextBtn { right: 20px; }
     </style>
+    <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
 
 </head>
 <body>
