--- a/order-track.html
+++ b/order-track.html
@@ -12,6 +12,7 @@
         .modal { display: none; }
         .modal.flex { display: flex; }
     </style>
+    <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
 </head>
 <body class="bg-gray-50">
     <!-- হেডার -->
