--- a/header.html
+++ b/header.html
@@ -1,139 +1,122 @@
-
-
-<!-- হেডার -->
-<header class="bg-brushstroke text-white py-2 px-2 md:px-4 flex justify-between items-center fixed top-0 left-0 w-full z-50">
+<!-- ================================================================= -->
+<!-- FILE: header.html (Updated with Notification Icon and Links)      -->
+<!-- ================================================================= -->
+<header class="bg-white shadow-md text-gray-800 py-3 px-4 flex justify-between items-center fixed top-0 left-0 w-full z-50" style="background-color: #F4A7B9;">
     <!-- লোগো -->
-    <a class="flex items-center" href="index.html">
-        <div class="flex items-center">
-            <img alt="Any's Beauty Corner লোগো" class="h-10 w-10 rounded-full mr-2 border-2 border-lipstick flex-shrink-0" height="40" src="img.jpg" width="40" onerror="this.src='https://via.placeholder.com/40'; this.alt='লোগো লোড হয়নি';">
-            <span class="text-base md:text-lg font-bold whitespace-nowrap">Any's Beauty Corner</span>
-        </div>
+    <a href="index.html" class="flex-shrink-0 flex items-center">
+        <img alt="Any's Beauty Corner Logo" class="h-10 w-10 rounded-full border-2 border-white" src="img.jpg">
+        <span class="hidden sm:block ml-3 font-bold text-lg text-gray-900">Any's Beauty Corner</span>
     </a>
 
-    <div class="flex items-center space-x-2 md:space-x-2">
-        <!-- ডেস্কটপ সার্চ বার -->
-        <div class="hidden md:block p-2 md:flex-grow relative">
-            <div class="relative">
-                <input class="w-full p-2 pl-10 border-0 rounded-full text-gray-800 focus:outline-none focus:ring-2 focus:ring-lipstick bg-white/50 backdrop-blur-sm placeholder:text-gray-400/80" id="searchInputDesktop" oninput="searchProductsDesktop()" placeholder="প্রোডাক্ট সার্চ করুন..." type="text" />
-                <i class="fas fa-search absolute left-3 top-1/2 transform -translate-y-1/2 text-gray-400/80"></i>
-            </div>
-            <!-- সার্চ রেজাল্ট -->
-            <div class="mt-2 max-h-60 overflow-y-auto absolute bg-white/90 backdrop-blur-sm w-full shadow-lg rounded-lg z-50" id="searchResultsDesktop"></div>
+    <!-- ডেস্কটপ সার্চ বার -->
+    <div class="hidden md:flex items-center justify-center flex-grow mx-4">
+        <div class="relative w-full max-w-lg">
+            <input class="w-full p-2 pl-10 border-2 border-transparent rounded-full bg-white/80 text-gray-800 focus:outline-none focus:ring-2 focus:ring-lipstick" id="searchInputDesktop" placeholder="প্রোডাক্ট খুঁজুন..." type="text" />
+            <i class="fas fa-search absolute left-3 top-1/2 transform -translate-y-1/2 text-gray-400"></i>
+            <div class="absolute top-full mt-2 w-full bg-white rounded-lg shadow-lg z-50 hidden" id="searchResultsDesktop"></div>
         </div>
+    </div>
 
+    <!-- ডান দিকের আইকনসমূহ -->
+    <div class="flex items-center space-x-2 sm:space-x-3">
         <!-- মোবাইল সার্চ আইকন -->
-        <div class="md:hidden cursor-pointer" onclick="focusMobileSearch()">
-            <i class="fas fa-search text-xl text-white"></i>
-        </div>
-
-        <!-- শপিং ব্যাগ আইকন -->
-        <button id="cartButton" class="bg-lipstick text-white w-10 h-10 rounded-full shadow-lg flex items-center justify-center relative" onclick="openCartSidebar()">
-            <i class="fas fa-shopping-bag"></i>
-            <span id="cartCount" class="absolute -top-2 -right-2 bg-red-500 text-white text-xs rounded-full h-5 w-5 flex items-center justify-center">0</span>
+        <button class="md:hidden text-gray-900 w-10 h-10 flex items-center justify-center" onclick="window.focusMobileSearch && window.focusMobileSearch()">
+            <i class="fas fa-search text-xl"></i>
         </button>
 
-        <!-- কার্ট সাইডবার -->
-        <div id="cartSidebar" class="fixed top-0 right-0 h-full w-80 bg-white shadow-lg transform translate-x-full transition-transform duration-300 ease-in-out z-50">
-            <div class="p-4 h-full flex flex-col">
-                <!-- কার্ট বন্ধ করার বাটন -->
-                <button onclick="closeCartSidebar()" class="text-gray-600 hover:text-gray-900">
-                    <i class="fas fa-times"></i>
-                </button>
-                <!-- কার্ট হেডিং -->
-                <h2 class="text-xl text-black font-bold mb-4">কার্ট</h2>
-                <!-- কার্ট আইটেমগুলি -->
-                <div id="cartItems" class="space-y-4 flex-1 overflow-y-auto"></div>
-                <!-- চেকআউট বাটন -->
-                <div class="cart-footer mt-4">
-                    <p id="totalPrice" class="text-lg font-bold">মোট মূল্য: 0 টাকা</p>
-                    <button onclick="checkout()" class="bg-lipstick text-white px-4 py-2 rounded w-full mt-2 hover:bg-lipstick-dark">চেকআউট</button>
-                </div>
-            </div>
-        </div>
+        <!-- নোটিফিকেশন আইকন (মোবাইল ও ডেস্কটপ) -->
+        <a href="notifications.html" title="নোটিফিকেশন" class="text-gray-900 w-10 h-10 flex items-center justify-center relative">
+            <i class="fas fa-bell text-xl"></i>
+            <!-- ভবিষ্যতে আনরিড কাউন্ট এখানে দেখানো যাবে -->
+            <!-- <span id="notificationCount" class="absolute -top-1 -right-1 bg-red-500 text-white text-xs rounded-full h-5 w-5 flex items-center justify-center">3</span> -->
+        </a>
 
-        <!-- কার্ট ওভারলে -->
-        <div id="cartOverlay" class="fixed inset-0 bg-black/50 z-40 hidden" onclick="closeCartSidebar()"></div>
-
-        <!-- টোস্ট নোটিফিকেশন -->
-        <div id="toast" class="fixed bottom-4 right-4 bg-green-500 text-white px-4 py-2 rounded-lg shadow-lg hidden z-50"></div>
+        <!-- শপিং কার্ট আইকন -->
+        <button id="cartButton" class="bg-lipstick text-white w-10 h-10 rounded-full shadow-lg flex items-center justify-center relative" onclick="window.openCartSidebar && window.openCartSidebar()">
+            <i class="fas fa-shopping-bag"></i>
+            <span id="cartCount" class="absolute -top-1 -right-1 bg-red-500 text-white text-xs rounded-full h-5 w-5 flex items-center justify-center">0</span>
+        </button>
 
         <!-- মোবাইল মেনু বাটন -->
-        <button id="mobileMenuButton" class="bg-white text-lipstick w-10 h-10 rounded md:hidden flex items-center justify-center"><i class="fas fa-bars text-xl"></i></button>
-
-        <!-- মোবাইল সাইডবার ওভারলে -->
-        <div class="fixed inset-0 z-40 hidden" id="sidebarOverlay">
-            <div class="fixed top-0 left-0 h-full w-4/5 bg-white shadow-lg transform -translate-x-full transition-transform duration-500 ease-in-out" id="sidebar">
-                <div class="p-4 h-full flex flex-col">
-                    <button id="closeSidebarButton" class="text-gray-600 hover:text-gray-900">
-                        <i class="fas fa-times"></i>
-                    </button>
-                    <ul class="mt-4 flex-1 overflow-y-auto">
-                        <li id="mobileLoginButton" class="border-b border-gray-200 py-2">
-                            <button class="flex items-center w-full" onclick="loginWithGmail()">
-                                <i class="fas fa-user-circle mr-2 bg-red-500 text-white p-1 rounded-full"></i>
-                                <span><span class="text-black">লগইন</span></span>
-                            </button>
-                        </li>
-                        <li class="border-b border-gray-200 py-2">
-                            <a class="block text-gray-800 hover:bg-gray-100" href="index.html#home" onclick="handleMenuItemClick()">হোম</a>
-                        </li>
-
-                        <li class="border-b border-gray-200 py-2">
-                            <button class="flex items-center justify-between w-full text-left text-gray-800 hover:bg-gray-100" onclick="toggleSubMenuMobile(event)">
-                                <span>পণ্য সমূহ</span>
-                                <i class="fas fa-chevron-down ml-2 transition-transform duration-300" id="arrowIcon"></i>
-                            </button>
-                            <div class="hidden bg-white/5 backdrop-blur-sm rounded-lg mt-1 ml-4" id="subMenuMobile">
-                                <a class="block px-4 py-2 text-gray-800 hover:bg-gray-200" href="#all" onclick="handleSubMenuItemClick('all')">সকল প্রোডাক্ট</a>
-                                <a class="block px-4 py-2 text-gray-800 hover:bg-gray-200" href="#health" onclick="handleSubMenuItemClick('health')">স্বাস্থ্য</a>
-                                <a class="block px-4 py-2 text-gray-800 hover:bg-gray-200" href="#cosmetics" onclick="handleSubMenuItemClick('cosmetics')">মেকআপ</a>
-                                <a class="block px-4 py-2 text-gray-800 hover:bg-gray-200" href="#skincare" onclick="handleSubMenuItemClick('skincare')">স্কিনকেয়ার</a>
-                                <a class="block px-4 py-2 text-gray-800 hover:bg-gray-200" href="#haircare" onclick="handleSubMenuItemClick('haircare')">হেয়ারকেয়ার</a>
-                                <a class="block px-4 py-2 text-gray-800 hover:bg-gray-200" href="#mehandi" onclick="handleSubMenuItemClick('mehandi')">মেহেদী</a>
-                            </div>
-                        </li>
-                        <li class="py-2"> <!-- No bottom border for the last item -->
-                            <a id="mobileOrderTrackButton" class="block text-gray-800 hover:bg-gray-100" href="order-track.html" onclick="handleOrderTrackClick(event)">অর্ডার ট্র্যাক</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="fixed top-0 right-0 h-full w-1/5" id="blankArea" onclick="closeSidebar()"></div>
-        </div>
+        <button id="mobileMenuButton" class="md:hidden bg-white text-lipstick w-10 h-10 rounded-full flex items-center justify-center shadow-lg">
+            <i class="fas fa-bars text-xl"></i>
+        </button>
 
         <!-- ডেস্কটপ মেনু -->
-        <nav class="hidden md:flex space-x-4 items-center">
-            <div id="desktopLoginButton">
-                <button class="flex items-center" onclick="loginWithGmail()">
-                    <i class="fas fa-user-circle mr-2 bg-red-500 text-white p-1 rounded-full"></i>
-                    <span><span class="text-black">লগইন</span></span>
+        <nav class="hidden md:flex items-center space-x-4 ml-4">
+            <a class="text-gray-900 hover:text-lipstick font-semibold" href="index.html">হোম</a>
+            <div class="relative group">
+                <button class="text-gray-900 hover:text-lipstick font-semibold flex items-center">
+                    <span>প্রোডাক্টস</span>
+                    <i class="fas fa-chevron-down ml-1 text-xs"></i>
                 </button>
+                <div class="absolute top-full -left-4 mt-2 w-48 bg-white rounded-md shadow-lg z-50 opacity-0 group-hover:opacity-100 transition-opacity duration-200 invisible group-hover:visible">
+                    <a class="block px-4 py-2 text-gray-800 hover:bg-gray-100" href="index.html#all" onclick="window.filterProducts && window.filterProducts('all')">সকল প্রোডাক্ট</a>
+                    <a class="block px-4 py-2 text-gray-800 hover:bg-gray-100" href="index.html#health" onclick="window.filterProducts && window.filterProducts('health')">স্বাস্থ্য</a>
+                    <a class="block px-4 py-2 text-gray-800 hover:bg-gray-100" href="index.html#cosmetics" onclick="window.filterProducts && window.filterProducts('cosmetics')">মেকআপ</a>
+                    <a class="block px-4 py-2 text-gray-800 hover:bg-gray-100" href="index.html#skincare" onclick="window.filterProducts && window.filterProducts('skincare')">স্কিনকেয়ার</a>
+                    <a class="block px-4 py-2 text-gray-800 hover:bg-gray-100" href="index.html#haircare" onclick="window.filterProducts && window.filterProducts('haircare')">হেয়ারকেয়ার</a>
+                </div>
             </div>
-            <a class="text-gray-800 hover:text-highlight" href="index.html#home">হোম</a>
-
-            <div class="relative">
-                <button class="text-gray-800 hover:text-highlight" onclick="toggleSubMenuDesktop()">
-                    পণ্য সমূহ
-                    <i class="fas fa-chevron-down ml-2 transition-transform duration-300" id="desktopArrowIcon"></i>
-                </button>
+            <a class="text-gray-900 hover:text-lipstick font-semibold" href="order-track.html">অর্ডার ট্র্যাক</a>
+            <div id="desktopLoginButton" class="ml-2">
+                <!-- লগইন/ইউজার প্রোফাইল বাটন script.js দিয়ে লোড হবে -->
             </div>
-            <a id="desktopOrderTrackButton" class="text-gray-800 hover:text-highlight" href="order-track.html" onclick="handleOrderTrackClick(event)">অর্ডার ট্র্যাক</a>
         </nav>
     </div>
+</header>
 
-    <!-- ডেস্কটপ টপ বার (সাবমেনু) -->
-    <div class="hidden absolute top-full left-0 w-full bg-white shadow-lg z-40" id="desktopSubMenuBar">
-        <div class="container mx-auto p-4">
-            <div class="grid grid-cols-4 gap-4">
-                <a class="block p-2 text-gray-800 hover:bg-gray-100" href="#all" onclick="filterProducts('all')">সকল প্রোডাক্ট</a>
-                <a class="block p-2 text-gray-800 hover:bg-gray-100" href="#health" onclick="filterProducts('health')">স্বাস্থ্য</a>
-                <a class="block p-2 text-gray-800 hover:bg-gray-100" href="#cosmetics" onclick="filterProducts('cosmetics')">মেকআপ</a>
-                <a class="block p-2 text-gray-800 hover:bg-gray-100" href="#skincare" onclick="filterProducts('skincare')">স্কিনকেয়ার</a>
-                <a class="block p-2 text-gray-800 hover:bg-gray-100" href="#haircare" onclick="filterProducts('haircare')">হেয়ারকেয়ার</a>
-                <a class="block p-2 text-gray-800 hover:bg-gray-100" href="#mehandi" onclick="filterProducts('mehandi')">মেহেদী</a>
-            </div>
+<!-- মোবাইল সার্চ বার (লুকানো) -->
+<div class="md:hidden p-2 w-full fixed top-16 left-0 z-40 hidden bg-transparent" id="mobileSearchBar">
+    <div class="relative">
+        <input type="text" id="searchInputMobile" class="w-full p-2 pl-10 border-0 rounded-full text-gray-800 focus:outline-none focus:ring-2 focus:ring-lipstick bg-white/90 backdrop-blur-sm" placeholder="প্রোডাক্ট খুঁজুন...">
+        <i class="fas fa-search absolute left-3 top-1/2 transform -translate-y-1/2 text-gray-400"></i>
+    </div>
+    <div id="searchResultsMobile" class="mt-2 max-h-60 overflow-y-auto w-full"></div>
+</div>
+
+<!-- কার্ট সাইডবার -->
+<div id="cartSidebar" class="fixed top-0 right-0 h-full w-full sm:w-80 bg-white shadow-lg transform translate-x-full transition-transform duration-300 ease-in-out z-[1001]">
+    <div class="p-4 h-full flex flex-col">
+        <div class="flex justify-between items-center mb-4">
+            <h2 class="text-xl text-black font-bold">আপনার কার্ট</h2>
+            <button onclick="window.closeCartSidebar && window.closeCartSidebar()" class="text-gray-600 hover:text-gray-900">
+                <i class="fas fa-times text-2xl"></i>
+            </button>
+        </div>
+        <div id="cartItems" class="space-y-4 flex-1 overflow-y-auto"></div>
+        <div class="border-t pt-4 mt-4">
+            <p id="totalPrice" class="text-lg font-bold text-gray-800">মোট মূল্য: 0 টাকা</p>
+            <button onclick="window.checkout && window.checkout()" class="bg-lipstick text-white w-full py-3 rounded-lg mt-2 font-semibold hover:bg-opacity-90">অর্ডার করুন</button>
         </div>
     </div>
+</div>
 
- 
-</header>
+<!-- কার্ট ও সাইডবার ওভারলে -->
+<div id="cartOverlay" class="fixed inset-0 bg-black/50 z-[1000] hidden" onclick="window.closeCartSidebar && window.closeCartSidebar()"></div>
+
+<!-- মোবাইল মেনু সাইডবার -->
+<div id="sidebarOverlay" class="fixed inset-0 bg-black/50 z-[1000] hidden">
+    <div class="fixed top-0 left-0 h-full w-4/5 max-w-sm bg-white shadow-lg transform -translate-x-full transition-transform duration-300 ease-in-out" id="sidebar">
+        <div class="p-4">
+            <button id="closeSidebarButton" class="absolute top-4 right-4 text-gray-600 hover:text-gray-900">
+                <i class="fas fa-times text-2xl"></i>
+            </button>
+            <ul class="mt-12 space-y-2">
+                <li id="mobileLoginButton" class="border-b pb-2">
+                    <!-- লগইন/ইউজার প্রোফাইল বাটন script.js দিয়ে লোড হবে -->
+                </li>
+                <li><a class="block py-2 px-3 text-gray-800 rounded hover:bg-gray-100" href="index.html">হোম</a></li>
+                <li><a class="block py-2 px-3 text-gray-800 rounded hover:bg-gray-100" href="order-track.html">অর্ডার ট্র্যাক</a></li>
+                <!-- এখানে আরও মেনু আইটেম যোগ করা যেতে পারে -->
+            </ul>
+        </div>
+    </div>
+</div>
+
+<!-- টোস্ট নোটিফিকেশন কন্টেইনার -->
+<div id="toast-container" class="fixed bottom-4 right-4 z-[2000] space-y-2"></div>
+
+<!-- এই script.js ফাইলটি এখন সব পেজ থেকেই লোড হবে -->
+<!-- `defer` অ্যাট্রিবিউট নিশ্চিত করে যে HTML পার্সিং শেষ হওয়ার পর স্ক্রিপ্টটি চলবে -->
+<script src="script.js" type="module" defer></script>
