--- a/notifications.html
+++ b/notifications.html
@@ -29,7 +29,7 @@
             </button>
         </div>
 
-        <div id="notificationList" class="max-w-2xl mx-auto bg-white rounded-lg shadow-md divide-y divide-gray-200">
+        <div id="notificationList" class="hidden max-w-2xl mx-auto bg-white rounded-lg shadow-md divide-y divide-gray-200">
             <!-- নোটিফিকেশনগুলো এখানে জাভাস্ক্রিপ্ট দিয়ে দেখানো হবে -->
         </div>
     </main>
@@ -108,7 +108,7 @@
                         </div>
                         <div class="flex-grow">
                             <p class="text-gray-800 ${!notif.isRead ? 'font-semibold' : ''}">${notif.message}</p>
-                            <p class="text-sm text-gray-500 mt-1">${formatTimeAgo(notif.timestamp)}</p>
+                            <p class="text-sm text-gray-500 mt-1 font-normal">${formatTimeAgo(notif.timestamp)}</p>
                         </div>
                         ${!notif.isRead ? '<div class="w-2.5 h-2.5 bg-blue-500 rounded-full ml-2 mt-1.5 flex-shrink-0"></div>' : ''}
                     </div>
@@ -134,12 +134,12 @@
                 loadingIndicator.style.display = 'none';
                 if (user) {
                     loginPrompt.style.display = 'none';
-                    notificationList.style.display = 'block';
+                    notificationList.classList.remove('hidden');
                     const notificationsRef = query(ref(database, `notifications/${user.uid}`), orderByChild('timestamp'));
                     onValue(notificationsRef, (snapshot) => displayNotifications(snapshot, user.uid));
                 } else {
-                    notificationList.style.display = 'none';
-                    loginPrompt.style.display = 'block';
+                    notificationList.classList.add('hidden');
+                    loginPrompt.classList.remove('hidden');
                     document.getElementById('loginButton').onclick = () => signInWithPopup(auth, provider);
                 }
             });
