--- a/product-detail.html
+++ b/product-detail.html
@@ -69,6 +69,12 @@
             <div id="actionButtons" class="flex flex-col sm:flex-row space-y-3 sm:space-y-0 sm:space-x-4">
                 </div>
         </div>
+        <section id="relatedProductsSection" class="mt-8 hidden">
+            <h2 class="text-2xl font-bold text-center mb-4 text-lipstick-dark">Related Products</h2>
+            <div id="relatedProductsContainer" class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
+                <!-- Related products will be loaded here -->
+            </div>
+        </section>
     </main>
     <div id="place-order-bar" class="fixed bottom-0 left-0 w-full bg-white p-3 shadow-lg z-40 hidden" style="box-shadow: 0 -2px 10px rgba(0,0,0,0.1);">
         <div class="flex justify-between items-center">
